--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -5,6 +5,8 @@ ruby '2.6.3'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.4', '>= 5.2.4.1'
+# Use for password_digest
+gem 'bcrypt', '3.1.12'
 # Use bootstrap
 gem 'bootstrap', '~> 4.1.1'
 gem 'jquery-rails'
